Attempting to fix bug on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  overscroll-behaviour: none;
+}
+
 body {
   color: white;
   background: linear-gradient(0deg, rgba(34,7,73,1) 0%, rgba(14,1,17,1) 100%, rgba(96,23,203,1) 100%);
